Release Candidate 2
===================

- Added support for property-ref to BelongsTo (many-to-one)

- Added support for CompositeUserType properties in nested classes

- Added ActiveRecordBase.Asc/Desc(params string[] propertyNames) methods to allow convenient specification of sort order.

- Applied Oleg Snurnikov's patch fixing AR-178
  "SessionScopeWebModule fails with HybridWebThreadScopeInfo"

- Applied Artur Grzegorzewicz's patch fixing AR-177
  "Parameterless overload of ActiveRecordStarter.Initialize"

- Added RegisterAssemblies to ActiveRecordStarter

- Relaxed the need for Types that represent database boundaries to extend
  from ActiveRecordBase.  Following AR-160 changes.

- Applied Michael Thomas' patch fixing AR-165
  "UniqueKey property on BelongsToAttributed does not cause generation of unique-key 
   attribute in associated many-to-one xml element"

- Applied Lee Henson's patch fixing AR-167
  "A CompositeKey class with multiple Equals() overloads throws exception"

- Applied Michael Thomas' suggestion to fix AR-170
  "Indeterministic crashes when creating the NHibernate Mapping"

- Applied Lee Henson's patch fixing AR-172
  "Support for collection-type attribute on HasMany"

- Applied Gautier's patch fixing AR-173
  "Add a type parameter to the methods : CreateSchema, DropSchema, 
  GenerateCreationScript and GenerateDropScript"

- Fixed AR-174
  "GenerateCreationScripts and GenerateDropScripts generate the scripts for only one database"

- Applied Mike Thomas' suggestion to make AR work with multiple databases without the
  ARBase usage. This fixes AR-160

- Added support for SaveOrUpdateCopy() which facilities working with detached objects.

- Applied Tim Haines' patch adding the ability to verify if the models match the db 
  structure. This can be done by setting the "verifyModelsAgainstDBSchema" attribute to true on
  the ActiveRecord configuration node, or using the method VerifySchema on ActiveRecordStarter
