@@ -1,0 +1,5 @@
+<%
+if ?errorMsg:
+	output errorMsg
+end 
+%>
