@@ -1,0 +1,3 @@
+<% unless ?errorMsg: %>
+Error does not exist
+<% end %>
